# Azure-Launcher

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_COMMANDS.sh  SETUP.md  USAGE_EXAMPLES.md  VERIFICATION.md  pyproject.toml
src/mhw_mod_manager/: __init__.py  app.py  main_window.py
src/mhw_mod_manager/core/: __init__.py  config.py  discovery.py  models.py
src/mhw_mod_manager/core/mods/: __init__.py  conflicts.py  deployment.py  installer.py  profiles.py  repository.py
src/mhw_mod_manager/nexus/: __init__.py  api_client.py  cache.py  download_manager.py  nexus_service.py  protocol_handler.py  version_utils.py
src/mhw_mod_manager/services/: logging_service.py  task_runner.py
src/mhw_mod_manager/theme/: __init__.py  catppuccin.py  material3.py
src/mhw_mod_manager/ui/dialogs/: add_mod_dialog.py  settings_dialog.py
src/mhw_mod_manager/ui/widgets/: conflict_view.py  downloads_panel.py  log_console.py  mod_detail_view.py  mod_list.py  nexus_browser.py  profile_selector.py
tests/: __init__.py  conftest.py  test_config.py  test_discovery.py  test_mods.py  test_nexus_metadata.py  test_version_utils.py
