[project]
name = "azure-launcher"
version = "1.0.0"
description = "A Linux-first desktop mod manager for Monster Hunter: World"
authors = [
    {name = "Azure Launcher Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.8.0",
    "pydantic>=2.10.0",
    "platformdirs>=4.3.0",
    "tomli>=2.2.0",
    "tomli-w>=1.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.scripts]
azure-launcher = "mhw_mod_manager.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mhw_mod_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=mhw_mod_manager --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
